==> vedderb/rise_sdvp/Embedded/RC_Controller/ublox.c <==
#include "ublox.h"
#include "commands.h"
#include "utils.h"
#include "pos.h"
#include "rtcm3_simple.h"
#include "terminal.h"
#include "comm_cc1120.h"
#include "comm_cc2520.h"
#include <string.h>
#include <math.h>
#define HW_UART_DEV					UARTD6
#define HW_UBX_TX_PORT				GPIOC
#define HW_UBX_TX_PIN				6
#define HW_UBX_RX_PORT				GPIOC
#define HW_UBX_RX_PIN				7
#define HW_UBX_RESET_PORT			GPIOC
#define HW_UBX_RESET_PIN			9
#define BAUDRATE					115200
#define SERIAL_RX_BUFFER_SIZE		1024
#define LINE_BUFFER_SIZE			256
#define UBX_BUFFER_SIZE				2048
#define CFG_ACK_WAIT_MS				100

void ublox_init(void) {
	palSetPadMode(HW_UBX_TX_PORT, HW_UBX_TX_PIN, PAL_MODE_ALTERNATE(8));
	palSetPadMode(HW_UBX_RX_PORT, HW_UBX_RX_PIN, PAL_MODE_ALTERNATE(8));
	palSetPadMode(HW_UBX_RESET_PORT, HW_UBX_RESET_PIN, PAL_MODE_OUTPUT_PUSHPULL);
	
	palClearPad(HW_UBX_RESET_PORT, HW_UBX_RESET_PIN);
	chThdSleepMilliseconds(10);
	palSetPad(HW_UBX_RESET_PORT, HW_UBX_RESET_PIN);
	chThdSleepMilliseconds(1000);

	uartStart(&HW_UART_DEV, &uart_cfg);

	chThdCreateStatic(process_thread_wa, sizeof(process_thread_wa), NORMALPRIO, process_thread, NULL);

	terminal_register_command_callback(
			"ubx_poll",
			"Poll one of the ubx protocol messages. Supported messages:\n"
			"  UBX_NAV_RELPOSNED - Relative position to base in NED frame\n"
			"  UBX_NAV_SVIN - survey-in data\n"
			"  UBX_RXM_RAWX - raw data",
			"[msg]",
			ubx_terminal_cmd_poll);

	// Prevent unused warnings
	(void)ubx_get_U1;
	(void)ubx_get_I1;
	(void)ubx_get_X1;
	(void)ubx_get_U2;
	(void)ubx_get_I2;
	(void)ubx_get_X2;
	(void)ubx_get_U4;
	(void)ubx_get_I4;
	(void)ubx_get_X4;
	(void)ubx_get_R4;
	(void)ubx_get_R8;

	(void)ubx_put_U1;
	(void)ubx_put_I1;
	(void)ubx_put_X1;
	(void)ubx_put_U2;
	(void)ubx_put_I2;
	(void)ubx_put_X2;
	(void)ubx_put_U4;
	(void)ubx_put_I4;
	(void)ubx_put_X4;
	(void)ubx_put_R4;
	(void)ubx_put_R8;

	chThdSleepMilliseconds(100);

	// Make sure that the baudrate is correct.
	// TODO: For some reason this does not work.
	if (ublox_cfg_rate(200, 1, 0) == -1) {
		ubx_cfg_prt_uart uart;
		uart.baudrate = BAUDRATE;
		uart.in_ubx = true;
		uart.in_nmea = true;
		uart.in_rtcm2 = false;
		uart.in_rtcm3 = true;
		uart.out_ubx = true;
		uart.out_nmea = true;
		uart.out_rtcm3 = true;

		set_baudrate(9600);
		reset_decoder_state();
		ublox_cfg_prt_uart(&uart);
		set_baudrate(BAUDRATE);
		ublox_cfg_rate(200, 1, 0);
	}

	// Disable survey in
	ubx_cfg_tmode3 tmode3;
	memset(&tmode3, 0, sizeof(ubx_cfg_tmode3));
	ublox_cfg_tmode3(&tmode3);

	// Switch off RTCM message output
	ublox_cfg_msg(UBX_CLASS_RTCM3, UBX_RTCM3_1005, 0);
	ublox_cfg_msg(UBX_CLASS_RTCM3, UBX_RTCM3_1077, 0);
	ublox_cfg_msg(UBX_CLASS_RTCM3, UBX_RTCM3_1087, 0);

	// Set rate to 5 Hz and time reference to UTC
	ublox_cfg_rate(200, 1, 0);

	// Dynamic model
	ubx_cfg_nav5 nav5;
	memset(&nav5, 0, sizeof(ubx_cfg_nav5));
	nav5.apply_dyn = true;
	nav5.dyn_model = 4;
	ublox_cfg_nav5(&nav5);

	// Time pulse configuration
	ubx_cfg_tp5 tp5;
	memset(&tp5, 0, sizeof(ubx_cfg_tp5));
	tp5.active = true;
	tp5.polarity = true;
	tp5.alignToTow = true;
	tp5.lockGnssFreq = true;
	tp5.lockedOtherSet = true;
	tp5.syncMode = false;
	tp5.isFreq = false;
	tp5.isLength = true;
	tp5.freq_period = 1000000;
	tp5.pulse_len_ratio = 0;
	tp5.freq_period_lock = 1000000;
	tp5.pulse_len_ratio_lock = 100000;
	tp5.gridUtcGnss = 0;
	tp5.user_config_delay = 0;
	tp5.rf_group_delay = 0;
	tp5.ant_cable_delay = 50;
	ublox_cfg_tp5(&tp5);

	// Switch in RELPOSNED messages
	ublox_cfg_msg(UBX_CLASS_NAV, UBX_NAV_RELPOSNED, 1);
}

void ublox_send(unsigned char *data, unsigned int len) {
	if (!process_tp) {
		return;
	}

	// Wait for the previous transmission to finish.
	while (HW_UART_DEV.txstate == UART_TX_ACTIVE) {
		chThdSleep(1);
	}

	// Copy this data to a new buffer in case the provided one is re-used
	// after this function returns.
	static uint8_t buffer[1024];
	memcpy(buffer, data, len);

	uartStartSend(&HW_UART_DEV, len, buffer);
}

static int wait_ack_nak(int timeout_ms) {
	systime_t to;
	if (timeout_ms >= 0) {
		to = MS2ST(timeout_ms);
	} else {
		to = TIME_INFINITE;
	}

	ack_wait_tp = chThdGetSelfX();
	int res = chEvtWaitAnyTimeout((eventmask_t)3, to);
	ack_wait_tp = 0;

	if (res == 1) {
		return 0;
	} else if (res == 2) {
		return 1;
	} else {
		return -1;
	}
}

static void ubx_decode_relposned(uint8_t *msg, int len) {
	(void)len;

	static ubx_nav_relposned pos;
	int ind = 2;
	uint32_t flags;

	pos.ref_station_id = ubx_get_U2(msg, &ind);
	pos.i_tow = ubx_get_U4(msg, &ind);
	pos.pos_n = (float)ubx_get_I4(msg, &ind) / 100.0;
	pos.pos_e = (float)ubx_get_I4(msg, &ind) / 100.0;
	pos.pos_d = (float)ubx_get_I4(msg, &ind) / 100.0;
	pos.pos_n += (float)ubx_get_I1(msg, &ind) / 10000.0;
	pos.pos_e += (float)ubx_get_I1(msg, &ind) / 10000.0;
	pos.pos_d += (float)ubx_get_I1(msg, &ind) / 10000.0;
	ind += 1;
	pos.acc_n = (float)ubx_get_U4(msg, &ind) / 10000.0;
	pos.acc_e = (float)ubx_get_U4(msg, &ind) / 10000.0;
	pos.acc_d = (float)ubx_get_U4(msg, &ind) / 10000.0;
	flags = ubx_get_X4(msg, &ind);
	pos.fix_ok = flags & 0x01;
	pos.diff_soln = flags & 0x02;
	pos.rel_pos_valid = flags & 0x04;
	pos.carr_soln = (flags >> 3) & 0x03;

	if (rx_relposned) {
		rx_relposned(&pos);
	}

	if (m_print_next_relposned) {
		m_print_next_relposned = false;
		commands_printf(
				"NED RX\n"
				"i_tow: %d ms\n"
				"N: %.3f m\n"
				"E: %.3f m\n"
				"D: %.3f m\n"
				"N_ACC: %.3f m\n"
				"E_ACC: %.3f m\n"
				"D_ACC: %.3f m\n"
				"Fix OK: %d\n"
				"Diff Soln: %d\n"
				"Rel Pos Valid: %d\n"
				"Carr Soln: %d\n",
				pos.i_tow,
				(double)pos.pos_n, (double)pos.pos_e, (double)pos.pos_d,
				(double)pos.acc_n, (double)pos.acc_e, (double)pos.acc_d,
				pos.fix_ok, pos.diff_soln, pos.rel_pos_valid, pos.carr_soln);
	}
}

static void ubx_decode_ack(uint8_t *msg, int len) {
	(void)len;

	int ind = 0;

	uint8_t cls_id = ubx_get_I1(msg, &ind);
	uint8_t msg_id = ubx_get_I1(msg, &ind);

	// TODO: Use these
	(void)cls_id;
	(void)msg_id;

	if (ack_wait_tp) {
		chEvtSignalI(ack_wait_tp, (eventmask_t)1);
	}
}

static void ubx_decode_nak(uint8_t *msg, int len) {
	(void)len;

	int ind = 0;

	uint8_t cls_id = ubx_get_I1(msg, &ind);
	uint8_t msg_id = ubx_get_I1(msg, &ind);

	// TODO: Use these
	(void)cls_id;
	(void)msg_id;

	if (ack_wait_tp) {
		chEvtSignalI(ack_wait_tp, (eventmask_t)2);
	}
}
